// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CxTabPane customize 1`] = `
<div>
  <div
    class="tab-pane fade active bazinga show"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CxTabPane component 1`] = `
<div>
  <div
    class="tab-pane fade"
  >
    Test
  </div>
</div>
`;
